# RISC-V-CPU-Simulator

./: .gitignore  ARCHITECTURE.md  Assignment_4.md  CLAUDE.md  CMakeLists.txt  CODE_WALKTHROUGH.md  PROJECT_ARCHITECTURE.md  QA_REFERENCE.md  README.md  debug_vsub.cpp  test_vsub_standalone.cpp  ugo.txt
.claude/: settings.local.json
Assignment_3/: Assignment_3.md  code.txt  op_codes.xlsx
Assignment_4/: Agent_Task_Spec_CPP.md  Assignment_4.md
sim/include/: bus.hpp  checks.hpp  cpu.hpp  isa.hpp  loader.hpp  mem_adapter.hpp  memory.hpp  timing.hpp  types.hpp
sim/src/: bus.cpp  checks.cpp  cpu.cpp  isa.cpp  loader.cpp  main_dual.cpp  main_dual_simple.cpp  main_single.cpp  memory.cpp
